cross-stack-template.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: This template creates EC2 resources and cross-stacks a VPC in another template

Parameters:
  SecurityGroupDescription:
    Description: Security Group to allow ssh and http traffic
    Type: String
  KeyName:
    Description: Key Pair for EC2
    Type: 'AWS::EC2::KeyPair::KeyName'

  InstanceType:
    Description: EC2 instance type ( with default AllowedValues )
    Type: String
    Default: t2.micro
    AllowedValues: #possible values
      - t1.micro
      - t2.nano
      - t2.micro
      - t2.small
    ConstraintDescription: must be a valid EC2 instance type.  

Mappings:
  RegionMap: 
    us-east-1: 
      "ImageID": "ami-033b95fb8079dc481"
    us-east-2: 
      "ImageID": "ami-0b614a5d911900a9b"
    us-west-1: 
      "ImageID": "ami-0573b70afecda915d"
    us-west-2: 
      "ImageID": "ami-0341aeea105412b57"

Resources:
 #EC2 Instances
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", ImageID] 
      InstanceType: !Ref InstanceType
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      SubnetId: 
        Fn::ImportValue: !Sub SampleNetworkCrossStack-SubnetID
      KeyName: !Ref KeyName
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            yum update -y
            yum install -y httpd
            systemctl start httpd.service
            systemctl enable httpd.service
            echo "Hello from Kodjo in Region ${AWS::Region}" > /var/www/html/index.html  

  EIPAddress:
    Type: 'AWS::EC2::EIP'
  IPAssoc:
    Type: 'AWS::EC2::EIPAssociation'
    Properties:
      InstanceId: !Ref EC2Instance
      EIP: !Ref EIPAddress    

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Ref SecurityGroupDescription
      VpcId: !ImportValue  SampleNetworkCrossStack-VPCID
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0     

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref EC2Instance
  InstanceIPAddress:
    Description: IP address of the newly created EC2 instance
    Value: !Ref EIPAddress

  WebServerURL:
    Value: !Join ["", ["http://", !GetAtt EC2Instance.PublicDnsName, ":80"]]
    Description: URL for the apache web server

  # EC2PrivateIp:
  #  Description: Private IP of the EC2Instance
  #  Value: !GetAtt EC2Instance.PrivateIP
      
  EC2DnsName:
   Description: The DNS name of the EC2Instance
   Value: !GetAtt EC2Instance.PublicDnsName
